--- a/cmd/web/index.templ
+++ b/cmd/web/index.templ
@@ -8,6 +8,7 @@ templ Index() {
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <script src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous"></script>
+            <link rel="stylesheet" href="/assets/css/output.css">
         </head>
         <body>
             <div id="keys" hx-get="/key-pair" hx-trigger="load">
